@@ -7,13 +7,15 @@
 
 		Exult logo & menu at startup
 
+		Menu works with mouse
+
 		GIMP plugin is functional
 
 		Better SI support
 
-		Midi Sound Effects (Windows Only)
+		Midi Sound Effects (Windows & Timidity only)
 
-		Tons of fixes
+		Tons and tons of fixes
 
 
 8/22/00:	v0.40
